gccida/c3/nonzero_bits
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8417:31: error: must use 'enum' tag to refer to type 'machine_mode'
__int64  nonzero_bits( rtx x, machine_mode mode) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8417:10: error: conflicting types for 'nonzero_bits'
__int64  nonzero_bits( rtx x, machine_mode mode) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:379:31: note: previous declaration is here
static unsigned HOST_WIDE_INT nonzero_bits  PARAMS ((rtx, enum machine_mode));
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8429:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8454:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8470:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8481:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v66; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8504:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = mode_class_0[v7]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8511:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8534:68: error: use of undeclared identifier 'machine_mode'
+ ( ( *( _DWORD *)x >> 13) & 0x7F8)) | rtwint & nonzero_bits( x, ( machine_mode)v7)); 
                                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8548:38: error: use of undeclared identifier 'machine_mode'
v60 = nonzero_bits( x->fld[0].rtx, ( machine_mode)v7); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8568:29: error: expected expression
v67 = nonzero_bits( *( rtx *)&x[1], mode); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8582:29: error: expected expression
v31 = nonzero_bits( *( rtx *)&x[1], v29); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8668:35: error: expected expression
v58 = v56 & nonzero_bits( *( rtx *)&x[1], v55); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8682:50: error: expected expression
return v78 & v38 & ( v40 | nonzero_bits( *( rtx *)&x[1], v39)); 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8687:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v41 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8749:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8755:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v70.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/combine.c:8788:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v73 = ( __int64)x[1]; 
                ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/nonzero_bits/src/obj/combine.o] Error 1
